@@ -7,6 +7,7 @@ import com.ddev.MessageApp.chat.model.Conversations;
 import com.ddev.MessageApp.chat.repository.ChatRepository;
 import com.ddev.MessageApp.chat.repository.ConversationRepository;
 import com.ddev.MessageApp.user.dto.ContactResponse;
+import com.ddev.MessageApp.user.dto.ContactSearch;
 import com.ddev.MessageApp.user.exception.UserException;
 import com.ddev.MessageApp.user.dto.ContactDTO;
 import com.ddev.MessageApp.user.model.ContactEntity;
@@ -67,7 +68,32 @@ public class ContactServiceImpl implements ContactService{
 
     @Override
     public PaginatedListObject<ContactResponse> getUserContactRequests(Integer userId, int page, int size) {
-        return getUserContactsByState(userId, page, size, Status.PENDING);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<ContactEntity> response = contactRepository.findByContactIdAndStatus(userId, Status.PENDING, pageable);
+        List<ContactResponse> users = response.getContent()
+                .stream()
+                .map(entity -> new ContactResponse(entity.getId(),
+                        entity.getUser().getId(), entity.getUser().getName(),
+                        entity.getUser().getEmail(), entity.getCreatedAt()))
+                .toList();
+        return new PaginatedListObject<>(users,
+                response.getNumber(), response.getTotalPages(), response.getTotalElements());
+    }
+
+    @Override
+    public PaginatedListObject<ContactSearch> getContactsByPattern(String pattern, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<UserEntity> coincidences = userRepository.findByEmailContainingIgnoreCase(pattern, pageable);
+        List<ContactSearch> users = coincidences.get()
+                .map(this::userEntityToContactSearch)
+                .toList();
+        return new PaginatedListObject<>(users,
+                coincidences.getNumber(), coincidences.getTotalPages(), coincidences.getTotalElements());
+    }
+
+    @Override
+    public void rejectContactRequest(Integer id) {
+        contactRepository.deleteById(id);
     }
 
     @Override
@@ -82,18 +108,22 @@ public class ContactServiceImpl implements ContactService{
 
     private PaginatedListObject<ContactResponse> getUserContactsByState(Integer userId, int page, int size, Status status) {
         Pageable pageable = PageRequest.of(page, size);
-        Page<ContactEntity> response = contactRepository.findByIdAndStatus(userId, status, pageable);
-        List<ContactResponse> blockedUsers = response.getContent()
+        Page<ContactEntity> response = contactRepository.findByUserIdAndStatus(userId, status, pageable);
+        List<ContactResponse> users = response.getContent()
                 .stream()
                 .map(this::contactEntityToResponse)
-                .collect(Collectors.toList());
-        return new PaginatedListObject<>(blockedUsers,
+                .toList();
+        return new PaginatedListObject<>(users,
                 response.getNumber(), response.getTotalPages(), response.getTotalElements());
+    }
+
+    private ContactSearch userEntityToContactSearch(UserEntity user) {
+        return new ContactSearch(user.getId(), user.getEmail(), user.getName());
     }
 
     private ContactResponse contactEntityToResponse(ContactEntity entity) {
         return new ContactResponse(entity.getId(), entity.getContact().getId(),
-                entity.getContact().getName(), entity.getCreatedAt());
+                entity.getContact().getName(), entity.getContact().getEmail(), entity.getCreatedAt());
     }
 
     private ContactEntity findContact(Integer id) {
